# qabot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  knowledge_base.json  main.py  pyproject.toml
services/: chat_service.py  embedding_service.py  knowledge_service.py  parser_service.py
